==========
01/04/2009
==========

- Ajustes no cadastro de feeds
- Inclusao de novas tags de i18n
- Alteracao do model, inclusao de stored procedure para inclusao de feeds

HORAS TRABALHADAS: 6h